--- a/model/B-Systerel/Event_B/Subset_026_Chap_4_6/latex/subset_4_6.tex
+++ b/model/B-Systerel/Event_B/Subset_026_Chap_4_6/latex/subset_4_6.tex
@@ -33,14 +33,18 @@
 \newcommand{\bmachine}[1]{\btext{#1}}
 \newcommand{\bctx}[1]{\btext{#1}}
 
-\author{Matthias Güdemann\\Systerel, France}
+\author{Matthias Güdemann}
 
-\affiliation{Systerel}
+\affiliation{Systerel\\
+  Les Portes de l’Arbois, Bâtiment A \\
+  1090 rue René Descartes \\
+  13857 Aix-en-Provence Cedex 3, France
+}
 
 \title{Event-B Model of Subset 026, Section 4.6}
 
 % define the coverart
-\coverart[width=350pt]{chart}
+\coverart[width=350pt]{openETCS_EUPL}
 
 \reporttype{Model Description}
 
