--- a/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
+++ b/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
@@ -1,18 +1,3 @@
-% \documentclass{template/openetcs_article}
-
-% \usepackage{graphicx}
-
-% %\usepackage[top=3cm, bottom=2.5cm, left=3cm, right=2.5cm] {geometry}
-% \usepackage {bsymb,b2latex}
-% \usepackage{b2latex}
-% \usepackage{fancyhdr}
-% %\usepackge{lastpage}%
-% %\usepackge{color}
-% \graphicspath{{./template/}{.}{./images/}}
-% %\usepackage[utf8]{inputenc}
-
-%---------------------------------------------------------
-
 \documentclass{template/openetcs_article}
 % Use the option "nocc" if the document is not licensed under Creative Commons
 %\documentclass[nocc]{template/openetcs_article}
@@ -48,14 +33,18 @@
 \newcommand{\bmachine}[1]{\btext{#1}}
 \newcommand{\bctx}[1]{\btext{#1}}
 
-\author{Matthias Güdemann\\Systerel, France}
+\author{Matthias Güdemann}
 
-\affiliation{Systerel}
+\affiliation{Systerel\\
+  Les Portes de l’Arbois, Bâtiment A \\
+  1090 rue René Descartes \\
+  13857 Aix-en-Provence Cedex 3, France
+}
 
 \title{Event-B Model of Subset 026, Section 3.5.3}
 
 % define the coverart
-\coverart[width=350pt]{chart}
+\coverart[width=350pt]{openETCS_EUPL}
 
 \reporttype{Model Description}
 
